package model;

public class Cheese {
}
