package model;

public class ExpirableProduct {
}
