package model;

public class NonExpirableProduct {
}
