package services;

public interface Shippable {
}
